feat: 리뷰어 랭킹 컴포넌트 구현

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -37,3 +37,12 @@ body {
   color: var(--foreground);
   font-family: var(--font-mplus), sans-serif;
 }
+
+.scrollbar-hide {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
+.scrollbar-hide::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, Opera */
+}
