--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,7 @@
-@import 'tailwindcss';
+@import "tailwindcss";
 
 :root {
-  --background: #1C1C22;
+  --background: #1c1c22;
   --foreground: #171717;
 }
 
@@ -36,4 +36,14 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: var(--font-mplus), sans-serif;
+}
+
+@layer base {
+  /* 자동완성시 bg 컬러 텍스트 컬러 변경방지 */
+  input:-internal-autofill-selected,
+  input:-webkit-autofill {
+    box-shadow: 0 0 0 1000px #252530 inset;
+    background-color: #252530 !important;
+    -webkit-text-fill-color: var(--color-white);
+  }
 }
