feat: productCard 개발

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -27,7 +27,7 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
+    --background: #1C1C22;
     --foreground: #ededed;
   }
 }
