feat: 로그인/회원가입 UI 페이지 구성 및 커스텀 훅 구현

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -27,7 +27,7 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #1C1C22;
+    --background: #1c1c22;
     --foreground: #ededed;
   }
 }
