--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -33,7 +33,7 @@
 }
 
 body {
-  background: var(--color-black1);
+  background: var(--background);
   color: var(--foreground);
   font-family: var(--font-mplus), sans-serif;
 }
