style: 로그인/회원가입 페이지 UI 개선

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,7 @@
 @import "tailwindcss";
 
 :root {
-  --background: #1C1C22;
+  --background: #1c1c22;
   --foreground: #171717;
 }
 
@@ -27,7 +27,7 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #1C1C22;
+    --background: #1c1c22;
     --foreground: #ededed;
   }
 }
@@ -48,7 +48,6 @@ body {
     transition: background-color 5000s ease-in-out 0s;
   }
 }
-
 .scrollbar-hide {
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
